<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">BLE 4.0 Eval</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_company">天津科技大学 研制</string>
    <string name="label_device_address">BT Address:</string>
    <string name="label_state">设备连接状态:</string>
    <string name="connected">Connect</string>
    <string name="health_state">当前健康状况</string>
    <string name="prower_state">设备剩余电量:</string>
    <string name="disconnected">Disconnect</string>
    <string name="title_devices">BT Device List</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="send">Send Data</string>
    <string name="not_connected">No Connection</string>
    
         <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
     <string name="data_none">暂无更多数据</string>
    <string name="load_fail">加载失败</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_comment">我的评价</string>
    <string name="my_message">我的消息</string>
    <string name="my_receipt">发票管理</string>
    <string name="my_problem">常见问题</string>
    <string name="my_setting">设置</string>
    <string name="my_unsetting">未设置</string>
    <string name="my_nickname">昵称</string>
    <string name="my_sex">性别</string>
    <string name="my_city">生日</string>
    <string name="my_unsex">未知</string>
    <string name="my_wx">微信</string>
    <string name="my_qq">QQ</string>
    <string name="my_wb">新浪微博</string>
    <string name="my_unbundle">未绑定</string>
</resources>
