<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="260dip"
        android:background="#ff4500" >

        <!-- android:background="#121a2a" -->

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:text="@string/label_company"
            android:textColor="#7D6200"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/health_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dip"
            android:text="@string/health_state"
            android:textColor="#77261B"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/bhealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dip"
            android:text="@string/connected"
            android:textColor="#ffffff"
            android:textSize="45sp" />

        <LinearLayout
            android:id="@+id/dive_message"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="35dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/label_state"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textColor="#ffffff"
                android:textSize="45sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dive_prower"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="100dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/prower_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/prower_state"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/prower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textColor="#ffffff"
                android:textSize="45sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_below="@id/top"
        android:layout_marginBottom="18dip"
        android:layout_marginTop="18dip" >

        <ImageView
            android:id="@+id/side1"
            android:layout_width="10dip"
            android:layout_height="match_parent"
            android:background="#778899" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="160dip"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/side1"
            android:gravity="center"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/side2"
            android:layout_width="10dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#778899" />

        <TextView
            android:id="@+id/pulse"
            android:layout_width="160dip"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/side2"
            android:gravity="center"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="294dip"
        android:layout_below="@+id/middle"
        android:background="#e7e7e7" >

        <Button
            android:id="@+id/light_off"
            android:layout_width="82dip"
            android:layout_height="82dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/lof" />

        <Button
            android:id="@+id/setting"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/set" />

        <Button
            android:id="@+id/datalist"
            android:layout_width="82dip"
            android:layout_height="82dip"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/setting"
            android:background="@drawable/matrix" />

        <Button
            android:id="@+id/call_help"
            android:layout_width="82dip"
            android:layout_height="82dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/light_off"
            android:background="@drawable/help" />
    </RelativeLayout>

</RelativeLayout>